@@ -3,6 +3,8 @@ package com.example.hotsix_be.reservation;
 import com.example.hotsix_be.hotel.repository.HotelRepository;
 import com.example.hotsix_be.reservation.entity.Reservation;
 import com.example.hotsix_be.reservation.repository.ReservationRepository;
+import com.example.hotsix_be.hotel.entity.Hotel;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
@@ -15,21 +17,26 @@ import org.springframework.stereotype.Component;
 @Profile("dev")
 @Order(2)
 public class ReservationInit implements ApplicationRunner {
-	private final ReservationRepository reservationRepository;
-	private final HotelRepository hotelRepository;
+    private final ReservationRepository reservationRepository;
+    private final HotelRepository hotelRepository;
 
-	@Override
-	public void run(ApplicationArguments args) throws Exception {
-		if (hotelRepository.count() > 50) {
-			Reservation reservation = new Reservation(
-					"2024-01-22",
-					"2024-01-28",
-					3,
-					550000,
-					hotelRepository.findAll().getLast()
-			);
+    @Override
+    public void run(ApplicationArguments args) throws Exception {
+        if (hotelRepository.count() > 50) {
+            List<Hotel> hotels = hotelRepository.findAll();
+            if (!hotels.isEmpty()) {
+                Hotel lastHotel = hotels.get(hotels.size() - 1);
 
-			reservationRepository.save(reservation);
-		}
-	}
+                Reservation reservation = new Reservation(
+                        "2024-01-22",
+                        "2024-01-28",
+                        3,
+                        550000,
+                        lastHotel
+                );
+
+                reservationRepository.save(reservation);
+            }
+        }
+    }
 }
